--- a/www/app/map/offline-map.html
+++ b/www/app/map/offline-map.html
@@ -1,21 +1,25 @@
-<ion-view title="Offline Maps">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+<ion-view title='Offline Maps'>
+  <ion-nav-buttons side='left'>
+    <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
-  <ion-nav-buttons side="right">
-    <button ng-click="clearOfflineTile();" class="button button-icon icon ion-trash-b"></button>
-    {{numOfflineTiles}} tiles
+  <ion-nav-buttons side='right'>
+    <button ng-click='vm.clearOfflineTile();' class='button button-icon icon ion-trash-b'></button>
+    {{vm.numOfflineTiles}} tiles
   </ion-nav-buttons>
-  <ion-content class="has-header">
+  <ion-content class='has-header'>
     <ion-list>
-      <ion-item ng-repeat="map in maps.maps">
-        <div class="row">
-          <div class="col">
+      <ion-item ng-repeat='map in vm.maps.maps'>
+        <div class='row'>
+          <div class='col'>
             <b>{{map.name}}</b>  <small>({{map.tileArray.length}} tiles, {{map.size | normalizeBytes}}, {{map.mapProvider}})</small>
           </div>
-          <div class="col item-button-right">
-            <button class="button button-second icon-left button-small button-calm ion-edit " ng-click="edit(map)">Edit</button>
-            <button class="button icon-left button-small button button-assertive ion-trash-b" ng-click="delete(map)">Delete</button>
+          <div class='col item-button-right'>
+            <button class='button button-second icon-left button-small button-calm ion-edit ' ng-click='vm.edit(map)'>
+              Edit
+            </button>
+            <button class='button icon-left button-small button button-assertive ion-trash-b' ng-click='vm.delete(map)'>
+              Delete
+            </button>
           </div>
         </div>
       </ion-item>
