--- a/www/app/spot/notes-tab.html
+++ b/www/app/spot/notes-tab.html
@@ -1,27 +1,27 @@
 <ion-view>
   <ion-content>
-    <label class="item item-input item-stacked-label item-text-wrap">
-      <span class="input-label">Spot Name</span>
-      <input type="text" placeholder="Name this Spot" ng-model="spot.properties.name">
+    <label class='item item-input item-stacked-label item-text-wrap'>
+      <span class='input-label'>Spot Name</span>
+      <input type='text' placeholder='Name this Spot' ng-model='vm.spot.properties.name'>
     </label>
-    <label class="item item-input item-stacked-label item-text-wrap">
-      <span class="input-label">ID</span>
-      <input type="number" disabled ng-model="spot.properties.id">
+    <label class='item item-input item-stacked-label item-text-wrap'>
+      <span class='input-label'>ID</span>
+      <input type='number' disabled ng-model='vm.spot.properties.id'>
     </label>
-    <label class="item item-input item-stacked-label item-text-wrap">
-      <span class="input-label">Date</span>
-      <input type="date" ng-model="spot.properties.date">
+    <label class='item item-input item-stacked-label item-text-wrap'>
+      <span class='input-label'>Date</span>
+      <input type='date' ng-model='vm.spot.properties.date'>
     </label>
-    <label class="item item-input item-stacked-label item-text-wrap">
-      <span class="input-label">Time</span>
-      <input type="time" ng-model="spot.properties.time">
+    <label class='item item-input item-stacked-label item-text-wrap'>
+      <span class='input-label'>Time</span>
+      <input type='time' ng-model='vm.spot.properties.time'>
     </label>
 
-    <div class="item item-divider">
+    <div class='item item-divider'>
       Notes
     </div>
-    <label class="item item-input">
-      <textarea placeholder="Notes about this Spot" rows="12" ng-model="spot.properties.notes"></textarea>
+    <label class='item item-input'>
+      <textarea placeholder='Notes about this Spot' rows='12' ng-model='vm.spot.properties.notes'></textarea>
     </label>
   </ion-content>
 </ion-view>
