--- a/www/app/map/image-map.html
+++ b/www/app/map/image-map.html
@@ -1,13 +1,13 @@
 <ion-view>
-  <ion-nav-title>{{ imageMap.title }}</ion-nav-title>
-  <ion-nav-buttons side="left">
-    <button ng-click="goToImageMaps();" class="button button-icon icon ion-arrow-left-c"></button>
+  <ion-nav-title>{{ vm.imageMap.title }}</ion-nav-title>
+  <ion-nav-buttons side='left'>
+    <button ng-click='vm.goToImageMaps();' class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
-  <ion-nav-buttons side="right">
-    <button ng-click="showActionsheet()" class="button button-icon icon ion-arrow-up-b"></button>
+  <ion-nav-buttons side='right'>
+    <button ng-click='vm.showActionsheet()' class='button button-icon icon ion-arrow-up-b'></button>
   </ion-nav-buttons>
-  <ion-pane data-tap-disabled="true">
-    <div id="mapdiv" style="height:100%"></div>
-    <div id="zoomInfo">zoom: {{currentZoom}}</div>
+  <ion-pane data-tap-disabled='true'>
+    <div id='mapdiv' style='height:100%'></div>
+    <div id='zoomInfo'>zoom: {{currentZoom}}</div>
   </ion-pane>
 </ion-view>
