--- a/www/app/map/image-maps.html
+++ b/www/app/map/image-maps.html
@@ -1,14 +1,14 @@
-<ion-view title="Image Maps">
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+<ion-view title='Image Maps'>
+  <ion-nav-buttons side='left'>
+    <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
-  <ion-content class="has-header">
-    <div class="padding" ng-if="!imageMaps.length">
+  <ion-content class='has-header'>
+    <div class='padding' ng-if='!vm.imageMaps.length'>
       In the Images tab for Spot, add an image to a Spot and check the Annotate box to make it available for annotation.
     </div>
     <ion-list>
-      <ion-item ng-repeat="imageMap in imageMaps"
-                ng-click="goToImageMap(imageMap)">
+      <ion-item ng-repeat='imageMap in vm.imageMaps'
+                ng-click='vm.goToImageMap(imageMap)'>
         {{imageMap.title}}
       </ion-item>
     </ion-list>
