--- a/www/app/map/map.html
+++ b/www/app/map/map.html
@@ -1,14 +1,15 @@
-<ion-view title="">
-    <ion-nav-buttons side="left">
-      <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+<ion-view title=''>
+  <ion-nav-buttons side='left'>
+    <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
     </ion-nav-buttons>
-    <ion-nav-buttons side="right">
-      <button ng-click="toggleLocation()" ng-class="{'button button-icon icon ion-pinpoint': !locationOn, 'button button-icon icon ion-android-locate': locationOn}"></button>
-      <button ng-click="showActionsheet()" class="button button-icon icon ion-arrow-up-b"></button>
-      <div ng-class="{'online': isOnline(), 'offline': !isOnline()}"></div>
+  <ion-nav-buttons side='right'>
+    <button ng-click='vm.toggleLocation()'
+            ng-class='{"button button-icon icon ion-pinpoint": !vm.locationOn, "button button-icon icon ion-android-locate": vm.locationOn}'></button>
+    <button ng-click='vm.showActionsheet()' class='button button-icon icon ion-arrow-up-b'></button>
+    <div ng-class='{"online": vm.isOnline(), "offline": !vm.isOnline()}'></div>
     </ion-nav-buttons>
-    <ion-pane data-tap-disabled="true">
-      <div id="mapdiv" style="height:100%"></div>
-      <div id="zoomInfo">Zoom: {{currentZoom}}</div>
+  <ion-pane data-tap-disabled='true'>
+    <div id='mapdiv' style='height:100%'></div>
+    <div id='zoomInfo'>Zoom: {{vm.currentZoom}}</div>
     </ion-pane>
 </ion-view>
