--- a/www/app/spot/details-tab.html
+++ b/www/app/spot/details-tab.html
@@ -1,101 +1,101 @@
-<form name="straboForm" novalidate="">
+<form name='straboForm' novalidate=''>
   <ion-view>
     <ion-content>
-      <div ng-show="showDynamicFields">
-        <div ng-repeat="field in survey">
-          <div id="{{ field.name }}" ng-show="showField(field.relevant)">
-            <div data-ng-switch on="field.type.split(' ')[0]">
-              <div ng-switch-when="integer">
-                <label class="item item-input item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }">
-                  <span class="input-label">{{field.label}}</span>
-                  <input type="number"
-                         name="{{ field.name }}"
-                         placeholder="{{ field.hint }}"
-                         ng-model="spot.properties[field.name]"
-                         ng-required="{{ field.required }}"
-                         ng-min="getMin(field.constraint)"
-                         ng-max="getMax(field.constraint)">
+      <div ng-show='vm.showDynamicFields'>
+        <div ng-repeat='field in vm.survey'>
+          <div id='{{ field.name }}' ng-show='vm.showField(field.relevant)'>
+            <div data-ng-switch on='field.type.split(" ")[0]'>
+              <div ng-switch-when='integer'>
+                <label class='item item-input item-stacked-label item-text-wrap'
+                       ng-class='{ "has-errors" : straboForm[field.name].$invalid, "no-errors" : straboForm[field.name].$valid }'>
+                  <span class='input-label'>{{field.label}}</span>
+                  <input type='number'
+                         name='{{ field.name }}'
+                         placeholder='{{ field.hint }}'
+                         ng-model='vm.spot.properties[field.name]'
+                         ng-required='{{ field.required }}'
+                         ng-min='vm.getMin(field.constraint)'
+                         ng-max='vm.getMax(field.constraint)'>
                 </label>
               </div>
-              <div ng-switch-when="decimal">
-                <label class="item item-input item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : rockDescriptionForm[field.name].$invalid, 'no-errors' : rockDescriptionForm[field.name].$valid }">
-                  <span class="input-label">{{field.label}}</span>
-                  <input type="number"
-                         name="{{ field.name }}"
-                         placeholder="{{ field.hint }}"
-                         ng-model="spot.properties[field.name]"
-                         ng-required="{{ field.required }}"
-                         ng-min="getMin(field.constraint)"
-                         ng-max="getMax(field.constraint)">
+              <div ng-switch-when='decimal'>
+                <label class='item item-input item-stacked-label item-text-wrap'
+                       ng-class='{ "has-errors" : rockDescriptionForm[field.name].$invalid, "no-errors" : rockDescriptionForm[field.name].$valid }'>
+                  <span class='input-label'>{{field.label}}</span>
+                  <input type='number'
+                         name='{{ field.name }}'
+                         placeholder='{{ field.hint }}'
+                         ng-model='vm.spot.properties[field.name]'
+                         ng-required='{{ field.required }}'
+                         ng-min='vm.getMin(field.constraint)'
+                         ng-max='vm.getMax(field.constraint)'>
                 </label>
               </div>
-              <div ng-switch-when="text">
-                <label class="item item-input item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }">
-                  <span class="input-label">{{field.label}}</span>
-                  <input type="text"
-                         name="{{ field.name }}"
-                         placeholder="{{ field.hint }}"
-                         ng-model="spot.properties[field.name]"
-                         ng-required="{{ field.required }}">
+              <div ng-switch-when='text'>
+                <label class='item item-input item-stacked-label item-text-wrap'
+                       ng-class='{ "has-errors" : straboForm[field.name].$invalid, "no-errors" : straboForm[field.name].$valid }'>
+                  <span class='input-label'>{{field.label}}</span>
+                  <input type='text'
+                         name='{{ field.name }}'
+                         placeholder='{{ field.hint }}'
+                         ng-model='vm.spot.properties[field.name]'
+                         ng-required='{{ field.required }}'>
                 </label>
               </div>
-              <div ng-switch-when="note">
-                <label class="item item-input item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }">
-                  <span class="input-label">{{ field.label }}</span>
-                  <textarea name="{{ field.name }}"
-                            rows="4"
-                            placeholder="{{field.hint}}"
-                            ng-model="spot.properties[field.name]"
-                            ng-required="{{ field.required }}">
+              <div ng-switch-when='note'>
+                <label class='item item-input item-stacked-label item-text-wrap'
+                       ng-class='{ "has-errors" : straboForm[field.name].$invalid, "no-errors" : straboForm[field.name].$valid }'>
+                  <span class='input-label'>{{ field.label }}</span>
+                  <textarea name='{{ field.name }}'
+                            rows='4'
+                            placeholder='{{field.hint}}'
+                            ng-model='vm.spot.properties[field.name]'
+                            ng-required='{{ field.required }}'>
                   </textarea>
                 </label>
               </div>
-              <div ng-switch-when="select_one">
-                <label class="item item-input item-select item-stacked-label item-text-wrap"
-                       ng-class="{ 'has-errors' : straboForm[field.name].$invalid, 'no-errors' : straboForm[field.name].$valid }">
-                  <span class="input-label">{{ field.label }}</span>
-                  <span class="item-placeholder"><small>{{ field.hint }}</small></span><br>
-                  <select name="{{ field.name }}"
-                          ng-model="spot.properties[field.name]"
-                          ng-options="choice.name as choice.label for choice in choices
-                                | filter: { 'list name': field.type.split(' ')[1] }"
-                          ng-required="{{ field.required }}">
-                    <option value=""></option>
+              <div ng-switch-when='select_one'>
+                <label class='item item-input item-select item-stacked-label item-text-wrap'
+                       ng-class='{ "has-errors" : straboForm[field.name].$invalid, "no-errors" : straboForm[field.name].$valid }'>
+                  <span class='input-label'>{{ field.label }}</span>
+                  <span class='item-placeholder'><small>{{ field.hint }}</small></span><br>
+                  <select name='{{ field.name }}'
+                          ng-model='vm.spot.properties[field.name]'
+                          ng-options='choice.name as choice.label for choice in vm.choices
+                                | filter: { "list name": field.type.split(" ")[1] }'
+                          ng-required='{{ field.required }}'>
+                    <option value=''></option>
                   </select>
                 </label>
               </div>
-              <div ng-switch-when="select_multiple">
-                <label class="item item-stacked-label item-text-wrap" ng-class="setSelMultClass(field)">
-                  <span class="input-label">{{field.label}}</span>
-                  <span class="item-placeholder"><small>{{ field.hint }}</small></span><br>
-                  <ion-checkbox name="{{ field.name }}"
-                                ng-repeat="choice in choices | filter: { 'list name': field.type.split(' ')[1] }"
-                                ng-checked="isOptionChecked(field.name, choice.name)"
-                                ng-click="toggleChecked(field.name, choice.name)"
-                                ng-required="{{ field.required }}">
+              <div ng-switch-when='select_multiple'>
+                <label class='item item-stacked-label item-text-wrap' ng-class='vm.setSelMultClass(field)'>
+                  <span class='input-label'>{{field.label}}</span>
+                  <span class='item-placeholder'><small>{{ field.hint }}</small></span><br>
+                  <ion-checkbox name='{{ field.name }}'
+                                ng-repeat='choice in vm.choices | filter: { "list name": field.type.split(" ")[1] }'
+                                ng-checked='vm.isOptionChecked(field.name, choice.name)'
+                                ng-click='vm.toggleChecked(field.name, choice.name)'
+                                ng-required='{{ field.required }}'>
                     {{ choice.label }}
                   </ion-checkbox>
                 </label>
               </div>
-              <div ng-switch-when="acknowledge">
-                <label class="item item-stacked-label item-text-wrap" ng-class="setSelMultClass(field)">
-                  <span class="input-label">{{field.label}}</span><br>
-                  <span class="item-placeholder"><small>{{ field.hint }}</small></span>
-                  <ion-checkbox name="{{ field.name }}"
-                                ng-checked="isAcknowledgeChecked(field.name)"
-                                ng-click="toggleAcknowledgeChecked(field.name)"
-                                ng-required="{{ field.required }}">
+              <div ng-switch-when='acknowledge'>
+                <label class='item item-stacked-label item-text-wrap' ng-class='vm.setSelMultClass(field)'>
+                  <span class='input-label'>{{field.label}}</span><br>
+                  <span class='item-placeholder'><small>{{ field.hint }}</small></span>
+                  <ion-checkbox name='{{ field.name }}'
+                                ng-checked='vm.isAcknowledgeChecked(field.name)'
+                                ng-click='vm.toggleAcknowledgeChecked(field.name)'
+                                ng-required='{{ field.required }}'>
                     Yes
                   </ion-checkbox>
                 </label>
               </div>
-              <div ng-if="straboForm[field.name].$touched">
-                <div ng-messages="straboForm[field.name].$error">
-                  <div ng-messages-include="app/spot/error-messages.html"></div>
+              <div ng-if='straboForm[field.name].$touched'>
+                <div ng-messages='straboForm[field.name].$error'>
+                  <div ng-messages-include='app/spot/error-messages.html'></div>
                 </div>
               </div>
             </div>
@@ -103,11 +103,11 @@
         </div>
       </div>
 
-      <div ng-show="showCustomFields">
-        <div ng-repeat="(key, value) in spot.properties">
-          <label class="item item-input item-stacked-label item-text-wrap">
-            <span class="input-label">{{ key }}</span>
-            <input type="text" ng-model="spot.properties[key]">
+      <div ng-show='vm.showCustomFields'>
+        <div ng-repeat='(key, value) in vm.spot.properties'>
+          <label class='item item-input item-stacked-label item-text-wrap'>
+            <span class='input-label'>{{ key }}</span>
+            <input type='text' ng-model='vm.spot.properties[key]'>
           </label>
         </div>
       </div>
