--- a/www/app/spot/error-messages.html
+++ b/www/app/spot/error-messages.html
@@ -1,16 +1,16 @@
-<div class="error" ng-message="required">
-  <i class="ion-information-circled"></i>
+<div class='error' ng-message='required'>
+  <i class='ion-information-circled'></i>
   This field is required!
 </div>
-<div class="error" ng-message="number">
-  <i class="ion-information-circled"></i>
+<div class='error' ng-message='number'>
+  <i class='ion-information-circled'></i>
   This field must be a number!
 </div>
-<div class="error" ng-message="min"><i class="ion-information-circled"></i>
-  <span ng-if="field.constraint_message">{{field.constraint_message}}</span>
-  <span ng-if="!field.constraint_message">Outside lower bound of valid range</span>
+<div class='error' ng-message='min'><i class='ion-information-circled'></i>
+  <span ng-if='field.constraint_message'>{{field.constraint_message}}</span>
+  <span ng-if='!field.constraint_message'>Outside lower bound of valid range</span>
 </div>
-<div class="error" ng-message="max"><i class="ion-information-circled"></i>
-  <span ng-if="field.constraint_message">{{field.constraint_message}}</span>
-  <span ng-if="!field.constraint_message">Outside upper bound of valid range</span>
+<div class='error' ng-message='max'><i class='ion-information-circled'></i>
+  <span ng-if='field.constraint_message'>{{field.constraint_message}}</span>
+  <span ng-if='!field.constraint_message'>Outside upper bound of valid range</span>
 </div>
