--- a/www/app/spot/groups-tab.html
+++ b/www/app/spot/groups-tab.html
@@ -1,12 +1,15 @@
 <ion-view>
   <ion-content>
-    <div ng-show="showGroups">
-      <div class="padding">
-        <button ng-click="linkGroup();" class="button button-positive icon-left icon ion-plus-round">Add or Edit Membership in Groups</button>
+    <div ng-show='vm.showGroups'>
+      <div class='padding'>
+        <button ng-click='vmChild.linkGroup();' class='button button-positive icon-left icon ion-plus-round'>Add or Edit
+          Membership in Groups
+        </button>
       </div>
       <ion-list>
-        <ion-item ng-repeat="item in groups_selected" ng-click="openSpot(item.id);">
-          {{item.name}} <small>({{ spotTypes[item.type] }})</small>
+        <ion-item ng-repeat='item in vm.groups_selected' ng-click='vm.openSpot(item.id);'>
+          {{item.name}}
+          <small>({{ vm.spotTypes[item.type] }})</small>
         </ion-item>
       </ion-list>
     </div>
