--- a/www/app/spot/links-modal.html
+++ b/www/app/spot/links-modal.html
@@ -1,14 +1,16 @@
 <ion-modal-view>
-  <ion-header-bar class="bar-dark nav-title-slide-ios7">
-    <h1 class="title">Link to New or Existing Spot</h1>
-    <div class="button button-clear" ng-click="closeModal('linkModal')"><span class="icon ion-close"></span></div>
+  <ion-header-bar class='bar-dark nav-title-slide-ios7'>
+    <h1 class='title'>Link to New or Existing Spot</h1>
+
+    <div class='button button-clear' ng-click='vm.closeModal("linkModal")'><span class='icon ion-close'></span></div>
   </ion-header-bar>
   <ion-content>
-    <ion-checkbox ng-repeat="item in other_spots"
-                  ng-value="item"
-                  ng-checked="isChecked(item.id)"
-                  ng-click="toggleSelection(item, 'links_selected', 'links_unselected')">
-      {{ item.name }} <small>({{ spotTypes[item.type] }})</small>
+    <ion-checkbox ng-repeat='item in vm.other_spots'
+                  ng-value='item'
+                  ng-checked='vm.isChecked(item.id)'
+                  ng-click='vm.toggleSelection(item, "links_selected", "links_unselected")'>
+      {{ item.name }}
+      <small>({{ vm.spotTypes[item.type] }})</small>
     </ion-checkbox>
   </ion-content>
 </ion-modal-view>
