--- a/www/app/spot/links-tab.html
+++ b/www/app/spot/links-tab.html
@@ -1,17 +1,20 @@
 <ion-view>
   <ion-content>
-    <div class="padding">
-      <button ng-click="linkSpot();" class="button button-positive icon-left icon ion-link">Add or Edit Links to Other Spots</button>
+    <div class='padding'>
+      <button ng-click='vmChild.linkSpot();' class='button button-positive icon-left icon ion-link'>Add or Edit Links to
+        Other Spots
+      </button>
     </div>
     <ion-list>
-      <ion-item ng-repeat="item in links_selected">
-        <a ng-click="openSpot(item.id);" style="text-decoration:none">{{item.name}}</a> <small>({{ spotTypes[item.type] }})</small>
-        &nbsp;&nbsp;&nbsp;&nbsp;<b>{{ item.relationship }}</b> this {{ spotTypes[spot.properties.type] }}
+      <ion-item ng-repeat='item in vm.links_selected'>
+        <a ng-click='vm.openSpot(item.id);' style="text-decoration:none">{{item.name}}</a>
+        <small>({{ vm.spotTypes[item.type] }})</small>
+        &nbsp;&nbsp;&nbsp;&nbsp;<b>{{ item.relationship }}</b> this {{ vm.spotTypes[vm.spot.properties.type] }}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <select ng-model="relationship"
-                ng-options="link_relationships.type for link_relationships in link_relationship.choices"
-                ng-change="setLinkRelationship(item, relationship)">
-          <option value="">-- select a relationship --</option>
+        <select ng-model='relationship'
+                ng-options='link_relationships.type for link_relationships in vm.link_relationship.choices'
+                ng-change='vmChild.setLinkRelationship(item, relationship)'>
+          <option value=''>-- select a relationship --</option>
         </select>
       </ion-item>
     </ion-list>
